--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=10">
     </head>
     <body>
+        <div class="wrapper">
         <h1>Rock ✊ Paper 🖐 Scissor ✌️️</h1>
         <script src="index.js"></script>
         
+        <div id="wrapper">
         <button onClick="checker('rock')">🪨</button>
         <button onClick="checker('paper')">🧻</button>
         <button onClick="checker('scissor')">✂️</button>
-        <p class='response' id="result"></p>
+        <p class='response' id="result">GAMETIME?</p>
+        </div>
+
+        </div>
     </body>
 </html>
