--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=10">
+        <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="wrapper">
@@ -12,7 +12,7 @@
         <button onClick="checker('rock')">🪨</button>
         <button onClick="checker('paper')">🧻</button>
         <button onClick="checker('scissor')">✂️</button>
-        <p class='response' id="result">GAMETIME?</p>
+        <p class='response' id="result">Click</p>
         </div>
 
         </div>
