--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="wrapper">
-        <h1>Rock ✊ Paper 🖐 Scissor ✌️️</h1>
-        <script src="index.js"></script>
-        
-        <div id="wrapper">
+  <head>
+    <link rel="stylesheet" href="index.css" />
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧩</text></svg>"
+    />
+    <title>Rock Paper Scissor</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>Rock ✊ Paper 🖐 Scissor ✌️️</h1>
+      <script src="index.js"></script>
+
+      <div id="wrapper">
         <button onClick="checker('rock')">🪨</button>
         <button onClick="checker('paper')">🧻</button>
         <button onClick="checker('scissor')">✂️</button>
-        <p class='response' id="result">Click</p>
-        </div>
-
-        </div>
-    </body>
+        <p class="response" id="result">Click</p>
+      </div>
+    </div>
+  </body>
 </html>
